Adding temporary changes to Github

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,37 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+  Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/zala.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Antonio Pacheco</p>
+          <p>Maria Garcia Autos</p>
+          <p class="card-text">Descripción: María García es una vendedora de autos con 5 años de experiencia en la industria automotriz.
+          <p>mariagarcia.autos@gmail.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/zala.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Marcelo Danubio Zalayeta</p>
+          <p>LocoAuto</p>
+          <p class="card-text">Con 8 años de experiencia en ventas y atención al cliente, Juan Martínez es un vendedor de autos </p>
+          <p>juanmartinezautos@hotmail.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/zala.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Pablo Javier Bengoechea</p>
+          <p>PeluCarlos</p>
+          <p class="card-text">Su profundo conocimiento técnico le permite ofrecer recomendaciones precisas y personalizadas sobre características y especificaciones de los vehículos.</p>
+          <p>carloslopezautos@yahoo.com</p>
         </div>
       </div>
     </div>
